 2012-04-26 09:39  paulbeach 
   M builds/install/misc/firebird.conf.in
Make the conf. parameter DummyPacketInterval more accurate.

 2012-04-20 20:01  hvlad 
   M src/jrd/jrd.cpp
Fixed bug CORE-3825 : If an autocommit transaction (i.e. transaction started with isc_tpb_autocommit option) run DDL using EXECUTE STATEMENT it will produce a bugcheck 287 (Too many savepoints) 

 2012-04-16 15:16  hvlad 
   M src/remote/inet.cpp
Fixed bug CORE-3819 : Wrong service name to port address resolution in database connection string

 2012-04-13 09:09  dimitr 
   M src/dsql/pass1.cpp
Additional fix for CORE-3807. Otherwise, _utf8 'A' is considered equal to _win1251 'ABCD' etc. The original code didn't check for charsets/collations but IMHO this was wrong.

 2012-04-12 16:32  dimitr 
   M src/jrd/os/posix/unix.cpp
   M src/jrd/os/win32/winnt.cpp
For the safety sake, let's not ignore possible OS level errors even if they seem unlikely to happen.

 2012-04-12 10:48  hvlad 
   M src/jrd/cmp.cpp
   M src/jrd/dfw.epp
   M src/jrd/met.epp
   M src/jrd/met_proto.h
Fixed bug CORE-3812 : Connection lost to database during massive dropping and altering primary keys of tables

 2012-04-08 05:57  dimitr 
   M src/jrd/Database.cpp
   M src/jrd/Database.h
Rolled back the optimization committed recently due to the found regressions. A better solution is researched.

 2012-04-07 18:06  hvlad 
   M src/isql/isql.epp
Fixed bug CORE-3810 : isql: zero divide + coredump when use "-pag 0" command switch & set heading on inside .sql script

 2012-04-07 09:07  dimitr 
   M src/lock/lock.cpp
   M src/lock/lock_proto.h
Fixed CORE-3686: Incorrect (zero) values are reported for "acquire blocks" and "mutex wait" counters in the fb_lock_print output.

 2012-04-06 09:07  hvlad 
   M builds/install/misc/firebird.conf.in
Misc

 2012-04-06 08:39  hvlad 
   M builds/install/misc/firebird.conf.in
More clear explanation of GCPolicy setting.
Thanks to the Paul Beach.

 2012-04-05 09:48  dimitr 